Fixed components spacing

--- a/web/src/app/app.component.scss
+++ b/web/src/app/app.component.scss
@@ -27,7 +27,12 @@ mat-drawer-container {
 
 .content {
   display: flex;
-  padding: 0px 16px;
+  height: 100%;
   flex-direction: row;
-  margin-top: 68px;
+}
+
+.content-space {
+  width: 100%;
+  height: 100%;
+  padding: 0px 16px;
 }
